namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-pi-form-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-pi-form-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "data-platform-application-migration-support"
    cloud-platform.justice.gov.uk/application: "Data Collection Tool"
    cloud-platform.justice.gov.uk/owner: "civil and administrative justice: cajs@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/pi-form"
    cloud-platform.justice.gov.uk/team-name: "cajs"
    cloud-platform.justice.gov.uk/review-after: ""
